exports[`test multi select filter 1`] = `
Array [
  Object {
    "animal": "Snake",
    "colour": "White",
    "name": "Hatson",
    "pattern": "Spotted",
    "price": 439,
    "rating": 7,
  },
]
`;

exports[`test multi select filter 2`] = `
Array [
  Object {
    "animal": "Turtle",
    "colour": "Black",
    "name": "Hattie",
    "pattern": "Solid",
    "price": 548,
    "rating": 5,
  },
  Object {
    "animal": "Snake",
    "colour": "White",
    "name": "Hatson",
    "pattern": "Spotted",
    "price": 439,
    "rating": 7,
  },
]
`;

exports[`test range filter 1`] = `
Array [
  Object {
    "animal": "Turtle",
    "colour": "Black",
    "name": "Hattie",
    "pattern": "Solid",
    "price": 548,
    "rating": 5,
  },
]
`;

exports[`test sorting 1`] = `
Array [
  Object {
    "animal": "Dog",
    "colour": "White",
    "name": "Hattie",
    "pattern": "Solid",
    "price": 738,
    "rating": 3,
  },
  Object {
    "animal": "Turtle",
    "colour": "Black",
    "name": "Hattie",
    "pattern": "Solid",
    "price": 548,
    "rating": 5,
  },
  Object {
    "animal": "Snake",
    "colour": "White",
    "name": "Hatson",
    "pattern": "Spotted",
    "price": 439,
    "rating": 7,
  },
]
`;
